# Accellis

./: .eslintrc.json  .replit  ADMIN_LOGIN_INSTRUCTIONS.md  CONNECTWISE_INTEGRATION_GUIDE.md  CONTRIBUTING.md  CREWHU_INTEGRATION_GUIDE.md  README-CI-SETUP.md  SECURITY.md  alembic.ini  app.py  app_new.py  auth.py  ci.yml  codeql.yml  complete_client_28_data.py  connectwise_integration.py  connectwise_routes.py  create_2_year_data.py  create_admin.py  create_admin_user.py  create_authentic_metrics.py  create_default_admin.py  create_historical_data.py  create_missing_client_scores.py  create_sample_users.py  create_trending_data.py  create_usage_thresholds.py  crewhu_integration.py  curl-format.txt  database.py  database_optimizations.py  diagnose_performance.py  fast_routes.py  fastapi_app.py  final_performance_fix.py  fix_dashboard_templates.py  fix_navigation_delays.py  forms.py  generate_sample_data.py  gunicorn.conf.py  (+44 more)
alembic/: env.py
app/: database.py  forms.py  main.py  models.py  utils.py
attached_assets/: Client Engagement Q1 2025 (1).xlsx  Pasted-Client-Client-Account-Manager-Contact-Contact-Email-Contact-Phone-Brooks-Stafford-Alex-Ivanov-Gre-1753826828693_1753826828693.txt  Pasted-from-datetime-import-datetime-date-from-enum-import-Enum-from-typing-import-Optional-List-from--1748364475184.txt  Pasted-import-sys-pandas-as-pd-from-datetime-import-datetime-from-sqlmodel-import-Session-from-database-1748373842057.txt
instance/: health_check.db
templates/: admin_clients.html  admin_dashboard.html  admin_data.html  admin_metrics.html  admin_settings.html  (+32 more)
(+24 files in other folders)
