[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-wtf>=1.2.2",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn[gthread]>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "wtforms>=3.2.1",
    "sqlalchemy>=2.0.41",
    "werkzeug>=3.1.3",
    "jinja2>=3.1.6",
    "fastapi>=0.115.12",
    "psycopg[binary]>=3.2.9",
    "sqlmodel>=0.0.24",
    "passlib[bcrypt]>=1.7.4",
    "pandas>=2.2.3",
    "uvicorn>=0.34.2",
    "alembic>=1.16.1",
    "python-multipart>=0.0.20",
    "weasyprint>=65.1",
    "pydantic>=2.11.5",
    "asgiref>=3.8.1",
    "flask-dance>=7.1.0",
    "flask-login>=0.6.3",
    "oauthlib>=3.2.2",
    "pyjwt>=2.10.1",
    "openpyxl>=3.1.5",
    "python-dateutil>=2.9.0.post0",
]
